# pysegments

./: pyproject.toml  setup.py
benchmarks/: CMakeLists.txt
